arc-script/arc-script-test/compile/src/snapshots/ast@basic_by.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/basic_by.arc

---
fun test(): i32 {
    val x = 1 by 2;
    val v = x.value;
    val k = x.key;
    v + k
}

