arc-script/arc-script-test/compile/src/snapshots/ast@basic_pipe.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/basic_pipe.arc

---
fun test1(): i32 {
    let a = 3 in
    let b = fun(x): {
        x + 1
    } in
    let c = fun(x): {
        x - 1
    } in
    let d: i32 = a |> b |> c in
    d
}

