arc-script/arc-script-test/compile/src/snapshots/ast@enum-pattern.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/enum-pattern.arc
---
enum Opt { Some(i32), None }
fun main() {
    if let Opt::Some(x) = Opt::Some(5) {
        unit
    } else {
        unit
    }
}

