arc-script/arc-script-test/compile/src/snapshots/ast@extern-fun.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/extern-fun.arc
---
extern fun increment(x: i32) -> i32;
task Adder() ((~i32)) -> ((~i32)) {
    extern fun addition(x: i32, y: i32) -> i32;
    on event => emit addition(event, event)
}
fun pipe(s: ~i32) {
    if increment(1) == 2 {
        Adder()(s)
    } else {
        Adder()(s)
    }
}

