arc-script/arc-script-test/compile/src/snapshots/ast@fun.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/fun.arc

---
fun max(a: i32, b: i32): i32 {
    val c = a > b;
    if c {
        a + 1
    } else {
        b
    }
}
fun test(): i32 {
    max(1, 2)
}

