arc-script/arc-script-test/compile/src/snapshots/ast@if.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/if.arc
---
fun test() {
    let c0 = true in
    let c1 = false in
    let v = 3 in
    if c0 {
        if c1 {
            v
        } else {
            v
        }
    } else {
        if c1 {
            v
        } else {
            v
        }
    }
}

