arc-script/arc-script-test/compile/src/snapshots/ast@if_let.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/if_let.arc

---
fun test() -> i32 {
    let x = 3 in
    let y = 5 in
    if let ((1, z), 1) = ((3, x), 1) {
        z + y
    } else {
        y + 2
    }
}

