arc-script/arc-script-test/compile/src/snapshots/ast@ifs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/ifs.arc
---
fun main() {
    unit
}
fun test() {
    let a_i32: i32 = 65 in
    let b_i32: i32 = 66 in
    let true_bool: bool = true in
    if true_bool {
        a_i32
    } else {
        b_i32
    }
}

